--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+    <androidx.appcompat.widget.Toolbar
+    android:id="@+id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="?attr/colorPrimary"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    android:title="Kosár" />
 
     <TextView
         android:id="@+id/textCartTitle"
@@ -21,6 +28,24 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="8dp"/>
+    <TextView
+    android:id="@+id/textTotalPrice"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Végösszeg: 0 Ft"
+    android:textSize="18sp"
+    android:textStyle="bold"
+    android:layout_marginTop="8dp"
+    android:gravity="end"
+/>
+<TextView
+    android:id="@+id/textCartSale"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Akciós termék!"
+    android:textColor="#FF0000"
+    android:textStyle="bold"
+    android:visibility="gone" />
 
     <Button
         android:id="@+id/buttonContinue"
